# 6502

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
claude_plans/: 2026-02-22_051955_memoized-weaving-starfish.md  2026-02-22_081517_memoized-weaving-starfish.md  2026-02-22_082054_memoized-weaving-starfish.md  2026-02-22_090757_memoized-weaving-starfish.md  2026-02-22_233722_memoized-weaving-starfish.md  2026-02-22_memoized-weaving-starfish.md
crates/apple2/: Cargo.toml
crates/apple2/src/: ay3_8910.rs  bus.rs  disk_ii.rs  keyboard.rs  lib.rs  memory.rs  mockingboard.rs  snapshot.rs  soft_switch.rs  speaker.rs
crates/atari2600/: Cargo.toml
crates/atari2600/src/: bus.rs  cartridge.rs  (+3 more)
crates/c64/: Cargo.toml
crates/common/: Cargo.toml
crates/cpu/: Cargo.toml
crates/frontend/: Cargo.toml
crates/frontend/src/: app.rs  audio.rs  config.rs  crt.rs  crt.wgsl  debugger.rs  input.rs  main.rs  menu.rs  save_manager.rs  system_roms.rs
crates/frontend/src/screens/: emulation.rs  mod.rs  system_select.rs
crates/nes/: Cargo.toml
docs/plans/: 2026-03-06-expansion-design.md  2026-03-06-slice1-c64.md  2026-03-07-crt-shader-design.md  2026-03-07-crt-shader-impl.md  2026-03-07-rom-browser-design.md  2026-03-07-rom-browser-impl.md  2026-03-07-save-states-design.md  2026-03-07-save-states-impl.md  2026-03-07-slice2-nes.md  2026-03-08-slice3-apple2.md  2026-03-08-slice4-atari2600.md  2026-03-08-slice5a-vic20.md  2026-03-08-slice5b-atari8bit.md  2026-03-08-slice5c-atari7800.md  2026-03-08-slice5d-bbcmicro.md  2026-03-08-slice5e-pet.md
roms/: README.md
(+68 files in other folders)
